# elikos_gazebo_models

./: CMakeLists.txt  LICENSE  README.md  package.xml
Intel_R200/: model.sdf
Intel_R200_Left/: model.sdf~
Intel_R200_Right/: model.config  model.sdf
circle_green/: model.config  model.sdf
circle_red/: model.config
elikos_cam/: elikos_cam.sdf
elikos_cameras/: elikos_ffmv_bottom.sdf
iris_realsense/: iris_opt_flow.sdf
models/Intel_R200/: model.config  model.sdf
models/Intel_R200_Back/: model.config  model.sdf
models/Intel_R200_Left/: model.config  model.sdf
models/Intel_R200_Right/: Intel_RealSense_R200.STL  model.sdf  model.sdf~
models/basketball_court/: model.config  model.sdf
models/checkerboard/: model.config  model.sdf  model.sdf.erb
models/circle_green/: model.sdf
models/circle_red/: model.sdf
models/crai_floor/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
models/create_crai/: model.config  model.sdf
models/create_crai/meshes/: DEPRECATED_create2_bumper_collision.dae  DEPRECATED_create2_collision_core.dae  DEPRECATED_irobot_create2_collision.dae  green_top.dae  (+2 more)
models/elikos_cam/: elikos_cam.sdf  model.config
models/iris_realsense/: iris_opt_flow.sdf  model.config
models/obstacle_0_75/: model.sdf
models/obstacle_1_0/: model.sdf
models/obstacle_1_75/: model.sdf
models/obstacle_2_0/: model.sdf
models/ptgrey_cam/: model.config  model.sdf
models/simple_camera/: model.config  model.sdf
ptgrey_cam/: model.sdf
worlds/: arena.world  mem_stadium.world  stadium.world  stadium.world.erb  stadium2.world
(+5 files in other folders)
